--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,66 @@ body {
     font-family: 'Albert Sans', sans-serif;
 }
 
+nav {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #0033cc;
+    margin: 1rem;
+    width: 5rem;
+    padding: 1rem;
+    border-radius: 10px;
+
+    .nav-item {
+        position: relative;
+        display: inline-block;
+        width: 100%;
+
+        .description {
+            visibility: hidden;
+            width: 120px;
+            height: 30px;
+            text-align: center;
+            line-height: 30px;
+            background-color: white;
+            color: black;
+            text-align: center;
+            border-radius: 6px;
+            padding: 5px 0;
+            position: absolute;
+            z-index: 1;
+            right: -130px;
+            top: 50%;
+            transform: translateY(-50%);
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+
+        &:hover .description {
+            visibility: visible;
+            opacity: 1;
+        }
+    }
+
+    a {
+        font-family: material icons;
+        font-size: 2rem;
+        height: 5rem;
+        width: 100%;
+        text-align: center;
+        line-height: 5rem;
+        color: white;
+        text-decoration: none;
+        display: block;
+
+        &:hover {
+            background-color: #ffffff50;
+            border-radius: 15px;
+        }
+    }
+}
+
 #hero {
     height: 100vh;
     width: 100%;
@@ -46,7 +106,7 @@ body {
                 cursor: pointer;
                 background-color: white;
                 border-radius: 100px;
-                font-size: 1.3rem;
+                font-size: 1.5rem;
                 width: 12rem;
                 height: 4rem;
                 transition: all 0.3s ease;
@@ -66,4 +126,14 @@ body {
             }
         }
     }
+}
+
+footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+
+    height: 40vh;
+    background-color: #0033cc;
 }
