--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -11,6 +11,7 @@ nav {
     border-radius: 10px;
 
     .nav-item {
+        cursor: pointer;
         position: relative;
         display: inline-block;
         width: 100%;
