--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -46,4 +46,31 @@ footer {
             }
         }
     }
+
+    @media (max-width: 768px) {
+        .col {
+            h1 {
+                font-size: 2rem;
+            }
+
+            h2 {
+                font-size: 1.5rem;
+            }
+        }
+    }
+    
+    @media (max-width: 425px) {
+        flex-direction: column;
+        height: 80vh;
+
+        .col {
+            h1 {
+                font-size: 2rem;
+            }
+
+            h2 {
+                font-size: 1rem;
+            }
+        }
+    }
 }
