style: navbar responsivity fix

--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -77,6 +77,12 @@
         }
     }
 
+    @media (max-width: 582px) {
+        .info {
+            margin-top: 8rem;
+        }
+    }
+
     @media (max-width: 425px) {
         .info {
             h1 {
