--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -3,6 +3,7 @@
     font-size: 2rem;
     height: 5rem;
     width: 5rem;
+    padding: 1rem;
     background-color: #0033cc;
     color: white;
     border-radius: 10px;
